--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "groq-sdk": "https://esm.sh/groq-sdk@^0.37.0"
+    "groq-sdk": "https://esm.sh/groq-sdk@^0.37.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
   }
 }
 </script>
