--- a/index.html
+++ b/index.html
@@ -4,99 +4,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>GroqMind 98</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              win98: {
-                teal: '#008080',
-                gray: '#c0c0c0',
-                'gray-dark': '#808080',
-                'gray-light': '#dfdfdf',
-                blue: '#000080',
-                'blue-light': '#1084d0',
-                text: '#0a0a0a',
-              },
-              terminal: {
-                black: '#0c0c0c',
-                green: '#00ff00',
-              }
-            },
-            fontFamily: {
-              retro: ['"VT323"', 'monospace'],
-              sans: ['"Segoe UI"', 'Tahoma', 'sans-serif'],
-            },
-            boxShadow: {
-              'out': 'inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px #808080, inset 2px 2px #ffffff',
-              'in': 'inset -1px -1px #ffffff, inset 1px 1px #0a0a0a, inset -2px -2px #dfdfdf, inset 2px 2px #808080',
-              'modern': '0 20px 50px rgba(0,0,0,0.5)',
-            }
-          },
-        },
-      }
-    </script>
-    <style>
-      body {
-        background-color: #008080;
-        margin: 0;
-        overflow: hidden;
-      }
-      
-      /* Retro Scrollbar */
-      ::-webkit-scrollbar {
-        width: 16px;
-        background: #dfdfdf;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #c0c0c0;
-        border: 1px solid #fff;
-        box-shadow: inset -1px -1px #000, inset 1px 1px #fff;
-      }
-      ::-webkit-scrollbar-button {
-        background: #c0c0c0;
-        width: 16px;
-        height: 16px;
-        box-shadow: inset -1px -1px #000, inset 1px 1px #fff;
-      }
-      
-      /* CRT Effect Overlay */
-      .crt::before {
-        content: " ";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
-        z-index: 2;
-        background-size: 100% 2px, 3px 100%;
-        pointer-events: none;
-      }
-
-      .win98-text-shadow {
-        text-shadow: 1px 1px 0px rgba(255,255,255,0.5);
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "groq-sdk": "https://esm.sh/groq-sdk@^0.37.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
